# algnet

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  run_simulations.py
.github/workflows/: check-md-links.yml  cmake-signle-platform.yml  cmake-single-platform.yml  load_testing.yml  load_testing_controller.yml  update-gh-pages.yml
.vscode_template/: launch.json  tasks.json
configuration_example/: README.md
configuration_example/examples/: bus_topology.yml  fat_tree_topology.yml  leaf_spine_topology.yml  mesh_topology.yml  star_topology.yml  three_tier_topology.yml  topology_simple.yml  vl2_topology.yml
configuration_example/generator/: generator.py
configuration_examples/: README.md
configuration_examples/generator/: README.md  bottleneck.py  cross_stress_generator.py  generator.py  simple_stress_generator.py
configuration_examples/simulation_examples/: README.md  basic_simulation.yml  incast_simulation.yml  mplb_simulation.yml  swift_simulation.yml  tcp_simulation.yml  tcp_single_layer_fractal.yml  tcp_two_layers_fractal.yml
configuration_examples/topology_examples/: README.md  bus_topology.yml  fat_tree_topology.yml  for_swift_testing.yml  incast_topology.yml  leaf_spine_topology.yml  mesh_topology.yml  single_layer_fractal.yml  star_topology.yml  three_tier_topology.yml  topology_simple.yml  two_layers_fractal.yml  vl2_topology.yml
git-hooks-template/: pre-commit
main/flamegraph/: README.md  fat_tree_simulation.yml  fat_tree_topology.yml  github_context.json  index.html  out.folded  perf.data
postprocessing/: cdf.ipynb
scripts/: calculate_deploy_dir.py  check-md-files.py  check-md-links.py  common.py  generate-html.py  generate_image.py  run_incast_simulation.py  run_simulations.py
scripts/install_deps/: plots.sh  userver.sh
scripts/simulation_generator/: all-to-all.py  all-to-all_config.yml
scripts/topology_generator/: README.md  bottleneck.py  fat_tree.py  fat_tree_config.yaml  fractal.py  incast.py
source/: device.cpp  device.hpp  event.cpp  event.hpp  flow.cpp  flow.hpp  link.cpp  link.hpp  logger.hpp  main.cpp  metrics_collector.cpp  metrics_collector.hpp  packet.cpp  packet.hpp  parser.cpp  parser.hpp  receiver.cpp  receiver.hpp  scheduler.cpp  scheduler.hpp  sender.cpp  sender.hpp  simulator.cpp  simulator.hpp  switch.cpp  switch.hpp  types.hpp
source/connection/: connection_impl.cpp  connection_impl.hpp  i_connection.hpp
source/device/: device.hpp  hasher.cpp  hasher.hpp  host.cpp  host.hpp  receiver.cpp  receiver.hpp  routing_module.cpp  routing_module.hpp  scheduling_module.hpp  sender.cpp  sender.hpp  switch.cpp  switch.hpp
source/event/: add_data_to_connection.hpp  arrive.cpp  arrive.hpp  event.cpp  event.hpp  generate.cpp  generate.hpp  process.cpp  process.hpp  send_data.cpp  send_data.hpp  start_connection.cpp  start_connection.hpp  start_flow.cpp  start_flow.hpp  stop.cpp  stop.hpp  tcp_metric.cpp  tcp_metric.hpp
source/flow/: I_tcp_flow.hpp  basic_flow.cpp  basic_flow.hpp  flow.cpp  flow.hpp  i_flow.hpp  tcp_flow.cpp  tcp_flow.hpp
source/interfaces/: device_interface.hpp  flow_interface.hpp  link_interface.hpp
source/link/: i_link.hpp  link.cpp  link.hpp  packet_queue.cpp  packet_queue.hpp
source/logger/: logger.cpp  logger.hpp
source/metrics/: draw_plots.cpp  draw_plots.hpp  links_queue_size_storage.hpp  metrics_collector.cpp  metrics_collector.hpp  metrics_storage.cpp  metrics_storage.hpp  multi_id_metrics_collector.cpp  multi_id_metrics_storage.hpp  write_to_csv.hpp
source/parser/: identifiable_parser.hpp  parse_primitives.cpp  parse_primitives.hpp  parse_utils.cpp  parse_utils.hpp  parser.cpp  parser.hpp  preset_storage.hpp
source/scenario/: scenario.cpp  scenario.hpp
source/units/: ld_comparation.hpp  size.hpp  speed.hpp  time.hpp  units.hpp
source/utils/: algorithms.cpp  algorithms.hpp  avg_rtt_packet_flag.hpp  bitset.hpp  filesystem.hpp  flag_manager.hpp  hasher.cpp  hasher.hpp  identifier_factory.cpp  identifier_factory.hpp  loop_iterator.hpp  packet_num_monitor.cpp  packet_num_monitor.hpp  statistics.hpp  str_expected.hpp  summary.cpp  summary.hpp  validation.cpp  validation.hpp
source/websocket/: i_serializable.hpp  reponse.cpp  request.cpp  request.hpp  session.cpp  (+2 more)
test/: identifier_factory_test.cpp  simple_test.cpp
(+15326 files in other folders)
